--- a/webapp/WEB-INF/resources/css/tabBar/tabBar.css
+++ b/webapp/WEB-INF/resources/css/tabBar/tabBar.css
@@ -1,5 +1,6 @@
 .tab {
-	width:100%;
+	width:95%;
+	margin-bottom: 40px;
     /*margin-left: 131px;
     margin-right: 8px;*/
     margin-top: 5px; 
