--- a/webapp/WEB-INF/resources/css/tabBar/tabBar.css
+++ b/webapp/WEB-INF/resources/css/tabBar/tabBar.css
@@ -42,6 +42,24 @@
     display: flex; /* 내부 요소를 플렉스 박스로 설정 */
     align-items: center; /* 버튼 안에서 세로 가운데 정렬 */
 }
+
+.delete-button {
+    height: 40px; /* tab보다 조금 작게 설정 */
+    padding: 0 11px; /* 좌우 패딩 */
+    border: 1px solid rgb(53, 53, 53);
+    border-radius: 4px; /* 모서리 둥글게 */
+    background-color: #ffffff; /* 배경색 */
+    cursor: pointer; /* 포인터 커서 */
+    display: flex; /* 내부 요소를 플렉스 박스로 설정 */
+    align-items: center; /* 버튼 안에서 세로 가운데 정렬 */
+}
+
+.button-image {
+    width: 10px;
+    height: 10px;
+}
+
+
 .excel-button {
     height: 40px; /* tab보다 조금 작게 설정 */
     padding: 0 11px; /* 좌우 패딩 */
@@ -70,6 +88,9 @@
     background-color: #f0f0f0; /* hover 시 색상 변화 */
 }
 .insert-button:hover {
+    background-color: #f0f0f0; /* hover 시 색상 변화 */
+}
+.delete-button:hover {
     background-color: #f0f0f0; /* hover 시 색상 변화 */
 }
 .excel-button:hover {
