--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                    	
+                                        	
+    
     
     
     
@@ -10,7 +11,8 @@
     
     <wb-module deploy-name="geomet">
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/webapp/WEB-INF/web.xml"/>
-                                                                                
+                                                                                        
+        
         
         
         
@@ -20,7 +22,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                        		
+                                                                                		
+        
         
         
         
@@ -30,7 +33,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                        		
+                                                                                		
+        
         
         
         
@@ -40,7 +44,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                        
+                                                                                
+        
         
         
         
@@ -49,7 +54,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/webapp"/>
-                                                                        
+                                                                                
+        
         
         
         
@@ -58,7 +64,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                        		
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+                                                                                		
+        
         
         
         
@@ -68,9 +76,11 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-                
+                        
+        
         <property name="context-root" value="geomet"/>
-                                                                        	
+                                                                                	
+    
     
     
     
@@ -80,7 +90,8 @@
     
     
     </wb-module>
-                                    
+                                        
+
 
 
 
